# oresmej

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  meta.yaml  noxfile.py  package.json  pixi.toml  pyproject.toml  recipe.yaml  requirements-dev.txt  setup.py
.github/workflows/: python_ci.yml  static.yml
docs/: conf.py
oresmej/: __init__.py  _version.py  oresmej.py
recipe/: meta.yaml
src/oresmej/: __init__.py  _version.py  oresmej.py
