# pyproject.toml

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "oresmej"
version = "0.1.3"
dynamic = ["keywords", "maintainers"]
license = "GPL-3.0-or-later"  # SPDX ID
authors = [
  { name="Mehmet Keçeci", email="mkececi@yaani.com" },
]
description = "Oresme numbers refer to the sums related to the harmonic series"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["oresmej"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = ["numpy", "matplotlib", "jax"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock", "ruff", "numpy", "matplotlib","jax"]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
build = [
    "setuptools (>=82.0.1)",
    "cython (>=3.2.4)"
]

[project.urls]
Homepage = "https://github.com/WhiteSymmetry/oresmej/"
Documentation = "https://WhiteSymmetry.github.io/oresmej/"
Repository = "https://github.com/WhiteSymmetry/oresmej/"
Issues = "https://github.com/WhiteSymmetry/oresmej/issues"
